--- a/animal.html
+++ b/animal.html
@@ -27,8 +27,49 @@
         crossorigin="anonymous"></script>
 
 
+
+
+   
+
+
+
+
     <!-- HEADER -->
     <div class="header">
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle"  data-target="#myNavbar">
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="#">WebSiteName</a>
+                        </div>
+                        <div class="collapse navbar-collapse" id="myNavbar">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="#">Home</a></li>
+                                <li class="dropdown">
+                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span
+                                            class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">Page 1-1</a></li>
+                                        <li><a href="#">Page 1-2</a></li>
+                                        <li><a href="#">Page 1-3</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">Page 2</a></li>
+                                <li><a href="#">Page 3</a></li>
+                            </ul>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="list.html">Patitas</a>
@@ -52,7 +93,7 @@
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
-                <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
+                <button class="LogIn btn btn-outline-primary btn-sm nav navbar-nav navbar-righ" type="submit">LogIn -
                     Register
                 </button>
             </div>
@@ -60,55 +101,124 @@
     </div>
 
     <!-- Ficha - Carrusel -->
-
-
     <div class="container conCarrusel">
         <div class="row">
             <div class="col col-sm-6">
-                <div class="colIzq">
-                    asd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                    fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                    ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                    fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                    ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                    fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                    ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                    fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                    ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                    fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                    ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                    fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                    ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                    fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsf
+                <div class="row">
+                    <div class="col col-sm-12">
+                        <div class="colIzq">
+                            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img class="d-block w-100" src="assets/carr_01.jpg" alt="First slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="assets/carr_02.jpg" alt="Second slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="assets/carr_03.jpg" alt="Third slide">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-sm-12">
+                        <div class="colIzq">
+                            <figure class="figure">
+                                <img src="assets/Chewy-pet-food-online-store.gif" class="figure-img img-fluid rounded"
+                                    alt="A generic square placeholder image with rounded corners in a figure.">
+                            </figure>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
 
-
             <div class="col col-sm-6">
-                asd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds
-                ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsfasd dsafa sd
-                fdsafsdfdsfdsfds fds ffadsfasd dsafa sd fdsafsdfdsfdsfds fds ffadsf
+                <!-- Card -->
+                <div class="card promoting-card">
+                    <!-- Card content -->
+                    <div class="card-body d-flex flex-row">
+                        <!-- Avatar -->
+                        <img src="assets/dog_10.jpg" class="rounded-circle mr-3" height="50px" width="50px"
+                            alt="avatar">
+                        <!-- Content -->
+                        <div>
+                            <!-- Title -->
+                            <h4 class="card-title font-weight-bold mb-2">Nombre: Doki</h4>
+                            <!-- Subtitle -->
+                            <p class="card-text"><i class="far fa-clock pr-2"></i>Birthday: 21/04/2019</p>
+
+                        </div>
+
+                    </div>
+
+                    <!-- Card -->
+                    <div class="card booking-card">
+
+                        <!-- Card image -->
+                        <div class="view overlay">
+                            <img class="card-img-top" src="assets/dog_10.jpg" alt="Card image cap">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+
+                        <!-- Card content -->
+                        <div class="card-body p-3 mb-2 bg-light text-dark">
+
+                            <!-- Title -->
+                            <h4 class="card-title font-weight-bold"><a>Tipo: Bulldog Francés</a></h4>
+                            <!-- Data -->
+                            <hr class="my-4">
+                            <ul class="">
+                                <li class="">Color de pelo</li>
+                                <li class="">Color de ojos</li>
+
+                            </ul>
+
+                            <hr class="my-4">
+                            <p class="lead"><strong>Descripción</strong></p>
+                            <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
+                                <li class="list-inline-item">
+
+                                    <p class="text-muted">There are many variations of passages of Lorem Ipsum
+                                        available, but the majority have suffered alteration in some form, by injected
+                                        humour, or randomised words which don't look even slightly believable. </p>
+                                </li>
+                            </ul>
+                            <hr class="my-4">
+                            <p class="lead"><strong>Datos del Contacto</strong></p>
+                            <ul class=".bg-light">
+                                <li class=".bg-light">Nombre<i class=""> </i></li>
+                                <li class=".bg-light">Telefono<i class=""></i></li>
+                                <li class=".bg-light">Email<i class=""></i></li>
+                            </ul>
+                            <button type="button" class="btn btn-info">Contactar</button>
+                            <hr class="my-4">
+                            <p class="lead"><strong>Barrio: La Comercial</strong></p>
+                            <hr class="my-4">
+                            <!-- Button -->
+                            <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
+                        </div>
+
+                    </div>
+                    <!-- Card -->
+                </div>
             </div>
         </div>
     </div>
-
-
-
-
-
-
 
 
     <!--FOOTER-->
