--- a/list.html
+++ b/list.html
@@ -2,7 +2,7 @@
 <html lang="Es">
 
 <head>
-    <title>Inicio</title>
+    <title>testing</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -11,15 +11,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
 </head>
 
 <body>
 
     <header></header>
     <!-- NAVBAR -->
-     <!-- NAVBAR -->
-     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
                 width="70"></span>
         </a>
@@ -52,15 +50,13 @@
 
     <div class="logo">
         <img src="assets/Patitas-01.jpg" class="img-responsive" alt="Logo Patitas" title="Patitas">
-        <hr />
-
     </div>
 
     <main>
         <section>
-            <div class="container-flex shadow-lg p-3 mb-5 bg-white rounded">
-                <div class="row justify-content-start">
-                    <div class="serchVerticalL col col-sm-2">
+            <div class="container-fluid">
+                <div class="rowPrincipal row">
+                    <div class="serchVerticalL col col-sm-12 col-md-2">
                         <form class="form" action="">
                             <p>
                                 <h4>Filtros</h4>
@@ -113,9 +109,9 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col col-sm-center col-flex">
+                    <div class="col col-sm-12 col-md-8">
                         <div class="row">
-                            <div class="col col-sm-4">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
@@ -127,7 +123,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-4">
+                            <div class="co col-sm-12 col-md-4">
                                 <div class="card">
                                     <img src="assets/dog_06.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
@@ -140,8 +136,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-4 ">
-                                <div class="card ">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                                <div class="card">
                                     <img src="assets/dog_07.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title">Clarita</h5>
@@ -155,8 +151,8 @@
                                 </div>
                             </div>
 
-                            <div class="col col-sm-4">
-                                <div class="card ">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                                <div class="card">
                                     <img src="assets/dog_11.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title">Rosita</h5>
@@ -172,8 +168,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-4">
-                                <div class="card ">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                                <div class="card">
                                     <img src="assets/dog_08.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
                                         <h5 class="card-title ">Catalina</h5>
@@ -182,7 +178,7 @@
                                             pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius
                                             in, ab perspiciatis non consequuntur fugiat quam provident earum magni optio
                                             quia ipsam qui porro, totam
-                                             repudiandae quis
+                                            repudiandae quis
                                             necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi
                                             officiis dicta perferendis dolore incidunt officia aut.
                                         </p>
@@ -190,8 +186,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-4 ">
-                                <div class="card ">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                                <div class="card">
                                     <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title ">Juan Carlos</h5>
@@ -205,13 +201,16 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
-                    <aside class="serchVerticalR col col-sm-2">
+                    <aside class="serchVerticalR col col-sm-12 col-md-2 col-lg-2">
                         <hr />
-                        <img src="assets/publicidad_01.jpg" class="card-img-top" alt="... ">
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg"
+                                class="card-img-top" alt="... "></a>
                         <hr />
-                        <img src="assets/publicidad_02.jpg" class="card-img-top" alt="... ">
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg"
+                                class="card-img-top" alt="... "></a>
                         <hr />
                     </aside>
                 </div>
