--- a/testing.html
+++ b/testing.html
@@ -50,15 +50,13 @@
 
     <div class="logo">
         <img src="assets/Patitas-01.jpg" class="img-responsive" alt="Logo Patitas" title="Patitas">
-        <!-- <hr /> -->
-
     </div>
 
     <main>
         <section>
-            <div class="container-flex shadow-lg p-3 mb-5 bg-white rounded">
-                <div class="row justify-content-start">
-                    <div class="serchVerticalL col col-sm-2">
+            <div class="container-fluid">
+                <div class="rowPrincipal row">
+                    <div class="serchVerticalL col col-sm-12 col-md-2">
                         <form class="form" action="">
                             <p>
                                 <h4>Filtros</h4>
@@ -111,9 +109,9 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col col-sm-center col-flex">
+                    <div class="col col-sm-12 col-md-8">
                         <div class="row">
-                            <div class="col col-sm-4">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
@@ -125,7 +123,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-4">
+                            <div class="co col-sm-12 col-md-4">
                                 <div class="card">
                                     <img src="assets/dog_06.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
@@ -138,8 +136,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-4 ">
-                                <div class="card ">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                                <div class="card">
                                     <img src="assets/dog_07.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title">Clarita</h5>
@@ -153,8 +151,8 @@
                                 </div>
                             </div>
 
-                            <div class="col col-sm-4">
-                                <div class="card ">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                                <div class="card">
                                     <img src="assets/dog_11.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title">Rosita</h5>
@@ -170,8 +168,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-4">
-                                <div class="card ">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                                <div class="card">
                                     <img src="assets/dog_08.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
                                         <h5 class="card-title ">Catalina</h5>
@@ -188,8 +186,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-4 ">
-                                <div class="card ">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                                <div class="card">
                                     <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title ">Juan Carlos</h5>
@@ -203,13 +201,16 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
-                    <aside class="serchVerticalR col col-sm-2">
+                    <aside class="serchVerticalR col col-sm-12 col-md-2 col-lg-2">
                         <hr />
-                        <img src="assets/publicidad_01.jpg" class="card-img-top" alt="Publicidad Freshpet">
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg"
+                                class="card-img-top" alt="... "></a>
                         <hr />
-                        <img src="assets/publicidad_02.jpg" class="card-img-top" alt="Publicidad alimentos para pet">
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg"
+                                class="card-img-top" alt="... "></a>
                         <hr />
                     </aside>
                 </div>
