--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col col-9 shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="col col-9">
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
@@ -90,7 +90,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col col-8">
+                    <div class="col col-8g-4">
                         <h5 class="card-title">Hermosos gatitos</h5>
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
@@ -121,71 +121,10 @@
                             which don't look even slightly believable.</p>
                     </div>
                 </div>
-
                 <hr />
 
-                <div class="row">
-                    <div class="col col-4">
-                        <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col col-8">
-                        <h5 class="card-title">Hermosos gatitos</h5>
-                        <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
-                                semanas</small></p>
-                        <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
-                    </div>
-                </div>
-
-                <hr />
-
-                <div class="row">
-                    <div class="col col-4">
-                        <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col col-8">
-                        <h5 class="card-title">Hermosos gatitos</h5>
-                        <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
-                                semanas</small></p>
-                        <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
-                    </div>
-                </div>
-
-                <hr />
-
-                <div class="row">
-                    <div class="col col-4">
-                        <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col col-8">
-                        <h5 class="card-title">Hermosos gatitos</h5>
-                        <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
-                                semanas</small></p>
-                        <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
-                    </div>
-                </div>
             </div>
-            <div class="col col-3 shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="col col-3">
                 <h5 class="card-title">Archivo</h5>
                 <ul class="list-group list-group-item-info">
                     <hr />
@@ -205,7 +144,6 @@
                     <li class="list-group-item">
                         <h6>Cras justo odio</h6>
                     </li>
-
                     <li class="list-group-item">Morbi leo risus</li>
                     <li class="list-group-item">Porta ac consectetur ac</li>
                     <li class="list-group-item">Vestibulum at eros</li>
@@ -214,8 +152,6 @@
             </div>
         </div>
     </div>
-
-
 
 
     <!--FOOTER-->
